<resources>
    <string name="app_name">网抑云音乐</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="song_name">歌曲名</string>
    <string name="singer_name">歌手名</string>
    <string name="end_time">04:21</string>
    <string name="start_time">00:00</string>
    <string name="album_name">专辑名</string>
    <string name="intro">介绍</string>
    <string name="_1">1</string>
    <string name="split">-</string>
    <string name="now_playing">当前播放</string>
    <string name="list_size">(0)</string>
    <string name="lyric">歌词</string>
    <string name="love">收藏</string>
    <string name="not_love">取消收藏</string>
    <string name="home">首页</string>
    <string name="reward">打赏</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="background">壁纸</string>
    <string name="exit">退出</string>
    <string name="erCiYuan">二次元</string>
    <string name="girl">美女</string>
    <string name="animal">动物</string>
    <string name="theme">主题</string>
    <string name="color">配色</string>
    <string name="play_quality">播放音质</string>
    <string name="normal">普通</string>
    <string name="better">高品质</string>
    <string name="high">无损(VIP)</string>
    <string name="download">下载</string>
    <string name="download_path">下载路径</string>
    <string name="back_to_parent">返回上一级</string>
    <string name="now_path">当前路径:</string>
    <string name="select">选择</string>
    <string name="check_update">检测更新</string>
    <string name="vip">限时VIP</string>
    <string name="customer">联系客服</string>
</resources>