<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_baseline_home_24"
            android:id="@+id/item_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/ic_baseline_photo_24"
            android:id="@+id/item_background"
            android:title="@string/background" />
        <item
            android:icon="@drawable/ic_baseline_palette_24"
            android:id="@+id/item_color"
            android:title="@string/color" />
        <item
            android:icon="@drawable/ic_baseline_audiotrack_24"
            android:id="@+id/item_quality"
            android:title="@string/play_quality" />
        <item
            android:icon="@drawable/ic_baseline_arrow_circle_down_24"
            android:id="@+id/item_download_path"
            android:title="@string/download_path" />
        <item
            android:icon="@drawable/ic_baseline_monetization_on_24"
            android:id="@+id/item_reward"
            android:title="@string/reward" />
        <item
            android:icon="@drawable/ic_baseline_refresh_24"
            android:id="@+id/item_update"
            android:title="@string/check_update" />
        <item
            android:icon="@drawable/ic_baseline_face_24"
            android:id="@+id/item_customer"
            android:title="@string/customer" />
        <item
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:id="@+id/item_exit"
            android:title="@string/exit" />
    </group>
</menu>