<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_erCiYuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/erCiYuan"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_girl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/girl"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_animal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal"
            android:textColor="@color/black" />

    </RadioGroup>

</LinearLayout>